--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,26 +1,30 @@
 .footer {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  max-width: $containerMaxWidth;
-  height: 548px;
-  margin: 0 auto;
-  padding: 160px 55px 50px;
+  width: 100vw;
   background-color: $colorMain;
 
-  font-size: 16px;
-  line-height: 28px;
-  color: $colorLight;
+  &__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: $containerMaxWidth;
+    height: 548px;
+    margin: 0 auto;
+    padding: 160px 55px 50px;
 
-  @media (max-width: $breakpointMedium) {
-    height: 751px;
-    padding: 120px 99px 35px;
-  }
+    font-size: 16px;
+    line-height: 28px;
+    color: $colorLight;
 
-  @media (max-width: $breakpointSmall) {
-    height: 1134px;
-    padding: 80px 20px 38px;
+    @media (max-width: $breakpointMedium) {
+      height: 751px;
+      padding: 120px 99px 35px;
+    }
+
+    @media (max-width: $breakpointSmall) {
+      height: 1134px;
+      padding: 80px 20px 38px;
+    }
   }
 
   &__content {
