--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,7 @@
 .header {
+  width: 100vw;
   height: $headerHeightLarge;
+  background-color: $colorMain;
 
   @media (max-width: $breakpointMedium) {
     height: 762px;
@@ -10,9 +12,18 @@
   }
 
   &__container {
+    position: relative;
+    display: flex;
+    max-width: $containerMaxWidth;
     height: 100%;
-    padding-top: 20px;
-    padding-bottom: 52px;
+    margin: 0 auto;
+    padding: 20px $containerSideIndentDesk 52px;
+
+    @media (max-width: $breakpointSmall) {
+      max-width: 690px;
+      padding-left: $containerSideIndentMobile;
+      padding-right: $containerSideIndentMobile;
+    }
   }
 
   &__logo {
