--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,8 @@
 @import "fonts";
 @import "typography";
 @import "header";
-@import "container";
 @import "menu";
+@import "wrapper";
 @import "navigation";
 @import "selection";
 @import "title";
