--- a/src/styles/daigest.scss
+++ b/src/styles/daigest.scss
@@ -3,12 +3,8 @@
   display: flex;
   flex-direction: column;
   height: 459px;
-  width: 100vw;
-  padding-top: 160px;
-  padding-bottom: 160px;
-  padding-left: calc(50% - 585px);
-  padding-right: calc(50% - 585px);
-
+  max-width: 2560px;
+  padding: 160px 55px;
   background-color: #cd4d31;
 
   &__title {
@@ -68,6 +64,45 @@
     &__email {
       margin-left: 0;
       margin-top: 80px;
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    & {
+      height: 532px;
+      padding-top: 80px;
+      padding-bottom: 85px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    &__box {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__title {
+      width: 280px;
+      align-self: center;
+      margin-bottom: 40px;
+      font-weight: 700;
+      font-size: 36px;
+    }
+
+    &__text {
+      width: 280px;
+    }
+
+    &__email {
+      margin-left: 0;
+      margin-top: 80px;
+    }
+  }
+
+  @media screen and (min-width: 1550px) {
+    & {
+        padding-left: calc(50% - 585px);
+        padding-right: calc(50% - 585px);
     }
   }
 }
