--- a/src/styles/fcard.scss
+++ b/src/styles/fcard.scss
@@ -1,9 +1,6 @@
 .fcard {
   display: flex;
   justify-content: space-around;
-  padding-left: 55px;
-  padding-right: 55px;
-  max-width: 1280px;
 
   &__date {
     position: relative;
@@ -124,5 +121,41 @@
       left: 40px;
       top: 50px;
     }
+  }
+
+  @media screen and (max-width: 700px) {
+    &__container {
+      margin-top: 60px;
+    }
+
+    &__date {
+      display: none;
+    }
+
+    &__type::before {
+      content: "14 серпня  14:00";
+      margin-right: 20px;
+      color: #cd4d31;
+    }
+
+    &__title {
+      width: 280px;
+    }
+
+    &__text {
+      width: 280px;
+    }
+
+    &__link {
+      width: 280px;
+    }
+  }
+
+  @media screen and (min-width: 1550px) {
+    & {
+      max-width: 2000px;
+      transform: scale(1.2);
+    }
+
   }
 }
