--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -80,7 +80,7 @@
     position: absolute;
 
     height: 100%;
-    width: 100vw;
+    width: 100%;
     justify-content: space-between;
     padding-left: 0;
     padding-top: 180px;
@@ -257,5 +257,56 @@
     &__work-info {
       display: none;
     }
+  }
+
+  @media screen and (max-width: 700px) {
+    &__img {
+      z-index: -5;
+    }
+
+    &__chekbutton {
+      position: absolute;
+      top: 50px;
+      right: 150px;
+    }
+
+    &__work-title-1,
+    &__work-title-2 {
+     display: none;
+    }
+
+    &__visite {
+      z-index: -5;
+    }
+
+    &__items {
+      height: 100%;
+      width: 100%;
+      padding-top: 40px;
+      padding-bottom: 0;
+
+      &::after {
+        display: none;
+      }
+    }
+
+    &__buttons {
+      flex-direction: column;
+      bottom: 60px;
+
+    }
+
+    &__member-link {}
+
+    &__ticket-link {
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+
+    &__link {
+      font-size: 24px;
+      line-height: 60px;
+    }
+
   }
 }
