--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -2,11 +2,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  max-width: 2560px;
   padding-top: 120px;
   padding-bottom: 240px;
-  padding-left: calc(50% - 585px);
-  padding-right: calc(50% - 585px);
+  padding-left: 55px;
+  padding-right: 55px;
+
 
   &__title {
     margin-bottom: 75px;
@@ -85,6 +86,21 @@
         left: -20px;
         width: 120px;
       }
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    & {
+      padding: 80px 10px;
+      margin-bottom: 60px;
+    }
+
+    &__title {
+      font-size: 36px;
+    }
+
+    &__card-2 {
+      display: none;
     }
   }
 }
