--- a/src/styles/ex-card.scss
+++ b/src/styles/ex-card.scss
@@ -1,53 +1,59 @@
 .ex-card {
+  position: relative;
   display: flex;
-  padding-left: 41px;
+  padding-left: 10px;
+  height: 700px;
+  width: 1280px;
 
-  &__container-img {
+  &__image {
     position: relative;
-    width: 585px;
-
-    margin-right: 30px ;
+    bottom: 0;
 
     order: 1;
-
-    &--2 {
-      background-image: url("../images/Мистецтво ХХ ст. - ХХі ст..png");
-      background-position: left;
-      background-repeat: no-repeat;
-
-      order: 3;
     }
-
-    &--3 {
-      background-image: url("../images/Старо давнє мисте цтво.png");
-      background-position: left;
-      background-repeat: no-repeat;
-    }
-  }
 
   &__image-11 {
-    transform: translateY(-220px);
+    position: relative;
+    bottom: 160px;
+    left: -10px;
+
+    width: 544px;
   }
 
   &__image-21 {
-    transform: translate(50px, 80px);
+    position: relative;
+    width: 609px;
+    right: -80px;
+    top: 50px;
+  }
+
+  &__image-22 {
+    position: absolute;
+    right: 0;
   }
 
   &__image-31 {
-    transform: translate(5px, 15px);
+    position: relative;
+    width: 584px;
+  }
+
+  &__image-32 {
+    position: absolute;
+    left: 0;
   }
 
   &__container-text {
     display: flex;
     flex-direction: column;
-    width: auto;
-
+    height: 450px;
     padding-top: 100px;
     padding-left: 70px;
-
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-left: 50px;
     order: 2;
 
-    &--2 {
+    &--margin {
       margin-left: 170px;
       margin-right: 40px;
     }
@@ -57,14 +63,13 @@
     margin-bottom: 10px;
 
     font-family: "Raleway", sans-serif;
-    font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 150%;
 
     color: #cd4d31;
 
-    &--1 {
+    &--big {
       margin-bottom: 20px;
 
       font-family: "Playfair Display", sans-serif;
@@ -122,7 +127,7 @@
     }
   }
 
-  @media screen and (max-width: 1250px) {
+    @media screen and (max-width: 1250px) {
     & {
       padding-left: 0;
       width: 100vw;
@@ -134,26 +139,27 @@
 
       &__image-11 {
         width: 293px;
-        transform: translateY(-50px);
       }
 
       &__image-21 {
         width: 298px;
-        transform: translate(5px, 110px);
+        right: -20px;
+      }
+
+      &__image-22 {
+       width: 298px;
       }
 
       &__image-31 {
-        height: 275px;
-        transform: translate(-10px, 45px);
+       width: 295px;
       }
 
-      &__container-img {
+      &__image-32 {
+        width: 298px;
+      }
+
+      &__container-image {
         width: 293px;
-      }
-
-      &__container-img--2,
-      &__container-img--3 {
-        background-size: contain;
       }
 
       &__container-text {
@@ -162,7 +168,7 @@
         padding-left: 20px;
       }
 
-      &__container-text--2 {
+      &__container-text--margin {
         margin-left: 80px;
       }
 
@@ -170,6 +176,63 @@
         width: 270px;
         font-weight: 200;
       }
+    }
+  }
+
+
+  @media screen and (max-width: 700px) {
+
+    &__container-text {
+      width: 280px;
+    }
+
+    &__text {
+      width: 130px;
+    }
+
+    &__image-11 {
+      transform: scaleX(-1);
+    }
+
+    &__title {
+      width: 260px;
+      margin-bottom: 30px;
+    }
+
+    &__date--big {
+      width: 150px;
+      margin-bottom: 10px;
+
+      font-size: 24px;
+      transform: translate(0);
+    }
+
+    &__container-text {
+      width: 230px;
+      margin-left: 0;
+    }
+
+    &__container-text--margin > :nth-child(3) {
+      margin-left: 150px ;
+    }
+
+    &__image-21 {
+      transform: scaleX(-1);
+      left: -40px;
+    }
+
+    &__image-22 {
+     display: none;
+    }
+
+    &__image-32 {
+      display: none;
+     }
+  }
+
+  @media screen and (min-width: 1550px) {
+    & {
+      transform: scale(1.1);
     }
   }
 }
