--- a/src/styles/visit_us.scss
+++ b/src/styles/visit_us.scss
@@ -1,27 +1,22 @@
 .visit-us {
-  box-sizing: border-box;
   position: relative;
+  display: grid;
+  grid-template-columns: 550px auto;
 
-  width: 100vw;
+  max-width: 2560px;
   padding-top: 190px;
-  padding-bottom: 195px;
-
-  padding-left: calc(50% - 640px);
-  padding-right: calc(50% - 640px);
 
   background-color: #3f5252;
 
   &__img {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    grid-column: 1;
+    grid-row: 1/4;
+
     height: 800px;
   }
 
   &__title {
-    height: 200px;
     width: 700px;
-    margin-left: calc(50% - 80px);
 
     font-weight: bold;
     font-size: 96px;
@@ -30,8 +25,7 @@
   }
 
   &__text {
-    width: 470px;
-    margin: 60px 0 60px 655px;
+    width: 380px;
 
     font-family: "Raleway", sans-serif;
     font-size: 16px;
@@ -40,12 +34,9 @@
     color: #f1f5f4;
   }
 
-  &__item {
-    margin-left: 285px;
-  }
-
   &__link {
-    margin-left: 655px;
+    width: 270px;
+    height: 60px;
     padding: 17.5px 99px;
 
     font-family: "Raleway", sans-serif;
@@ -64,32 +55,72 @@
     }
   }
 
-  @media screen and (max-width: 1250px) {
+
+  @media screen and (max-width: 1250px ) {
     & {
+      grid-template-columns: 40vw 60vw;
+      grid-template-rows: 25% 35% 40%;
       padding-top: 120px;
-      padding-bottom: 170px;
+      padding-bottom: 0;
     }
 
     &__img {
+      grid-column: 1;
+      grid-row: 2/4;
       height: 460px;
+
+      transform: translate(-30px, -7px);
     }
 
     &__title {
-      height: 200px;
+      grid-column: 1/3;
+      grid-row: 1/2;
+
       width: 523px;
-      margin-left: 130px;
+      margin-left: 99px;
 
       font-size: 72px;
     }
 
     &__text {
-      margin-left: 330px;
+      margin-top: 80px;
       width: 370px;
     }
 
     &__link {
-      margin-left: 330px;
+      margin-top: 20px;
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    & {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 80px 10px;
     }
 
+    &__img {
+      display: none;
+    }
+
+    &__title {
+      width: 280px;
+      margin-left: 0;
+
+      font-size: 48px;
+      font-weight: 700;
+    }
+
+    &__text {
+      margin-top: 40px;
+      width: 280px;
+    }
+
+    &__link {
+      grid-row: 3/4;
+      margin-top: 60px;
+      width: 280px;
+    }
   }
 }
