--- a/src/styles/future.scss
+++ b/src/styles/future.scss
@@ -79,8 +79,7 @@
       padding-top: 80px;
       padding-bottom: 200px;
       padding-left: 10px;
-      padding-right: 10px;;
-
+      padding-right: 10px;
     }
 
     &__title {
@@ -88,4 +87,4 @@
       text-align: start;
     }
   }
- }
+}
