--- a/src/styles/current.scss
+++ b/src/styles/current.scss
@@ -39,6 +39,12 @@
   }
 }
 
+@media screen and (min-width: 1500px) {
+  .current-events {
+    align-self: center;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .current-events {
     margin-top: 387px;
