--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,7 +4,7 @@
 
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
-  margin: 0 auto;
+  margin: auto;
 
   &__container {
     margin-top: 50px;
@@ -235,7 +235,6 @@
   }
 
   .footer__line {
-    margin-left: 1%;
     width: 100%;
     margin: auto;
   }
