--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -117,6 +117,12 @@
   }
 }
 
+@media screen and (min-width: 1500px) {
+  .gallery {
+    align-self: center;
+  }
+}
+
 @media screen and (max-width: 1500px) {
   .gallery {
     &__top {
