--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -72,7 +72,6 @@
     text-transform: uppercase;
   }
 
-
   &__list {
     position: absolute;
     right: 0;
@@ -82,13 +81,11 @@
     height: 72px;
     width: 85%;
   }
-
 }
 
-
 .search__window {
-  width: 100px;
-  background-image: url('../images/search.svg');
+  width: 22px;
+  background-image: url("../images/search.svg");
   background-repeat: no-repeat;
   border: 0.2px solid lightgray;
   background-position: right;
@@ -98,6 +95,14 @@
   align-content: center;
   height: 20px;
   outline: none;
+  margin-right: 20px;
+  -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+
+    &:focus {
+      width: 150px;
+    }
+
 }
 
 .menu__toggle:checked ~ .menu__btn > span {
@@ -129,6 +134,7 @@
   .menu__list {
     flex-direction: column;
     align-items: center;
+    padding-right: 10vw;
   }
 
   .menu__item {
@@ -140,6 +146,4 @@
   .menu__logo {
     right: 0;
   }
-
-
 }
