fix favicon & transform

--- a/src/styles/ex-card.scss
+++ b/src/styles/ex-card.scss
@@ -25,6 +25,8 @@
     width: 609px;
     right: -80px;
     top: 50px;
+
+    z-index: 2;
   }
 
   &__image-22 {
@@ -35,6 +37,8 @@
   &__image-31 {
     position: relative;
     width: 584px;
+
+    z-index: 2;
   }
 
   &__image-32 {
@@ -211,7 +215,7 @@
     }
 
     &__image-21 {
-      transform: scaleX(-1);
+      transform: scaleX(-1) scaleY(-1);
       left: -40px;
     }
 
