fix links & pointer

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -38,6 +38,10 @@
     height: 20px;
 
     z-index: 5;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &__visite {
@@ -226,6 +230,8 @@
 
     &__img {
       opacity: 0;
+
+      z-index: -1;
     }
 
     &__visite {
