add var &mixins

--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 2560px;
+  max-width: $max-monitor;
 
   padding-top: 170px;
 
@@ -11,9 +11,8 @@
   &__title {
     text-align: center;
 
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 48px;
+    @include headers-font;
+    
     line-height: 120%;
 
     color: #1c1b29;
@@ -28,9 +27,8 @@
     margin-left: calc(50% + 400px);
     margin-right: auto;
 
-    font-family: "Raleway", sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     line-height: 100%;
     color: #1c1b29;
     text-decoration: none;
