--- a/src/styles/fcard.scss
+++ b/src/styles/fcard.scss
@@ -70,9 +70,8 @@
   &__text {
     margin-bottom: 60px;
 
-    font-family: "Raleway", sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     line-height: 150%;
     color: #504f5e;
   }
@@ -83,11 +82,11 @@
 
     padding: 19px 65px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     text-decoration: none;
-    color: #f1f5f4;
-    background-color: #cd4d31;
+    color: $white-text;
+    background-color: $button-color;
     border: 3px solid #3f5252;
     border-color: transparent;
 
