--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,13 +3,13 @@
 
   display: flex;
 
-  max-width: 2560px;
+  max-width: $max-monitor;
   padding-top: 160px;
   padding-bottom: 157px;
   padding-left: 55px;
   padding-right: 55px;
 
-  background: #3f5252;
+  background: $background-subcolor;
 
   &__arrow {
     position: absolute;
@@ -17,7 +17,7 @@
     right: 50px;
     width: 20px;
     height: 20px;
-    color: #f1f5f4;
+    color: $white-text;
 
     &::after {
       content: "";
@@ -26,7 +26,7 @@
       top: 6px;
       width: 12px;
       height: 1px;
-      background-color: #f1f5f4;
+      background-color: $white-text;
       transform: rotate(45deg);
     }
 
@@ -37,7 +37,7 @@
       top: 6px;
       width: 12px;
       height: 1px;
-      background-color: #f1f5f4;
+      background-color: $white-text;
       transform: rotate(315deg);
     }
   }
@@ -58,7 +58,7 @@
     font-weight: 100;
     font-size: 14px;
     line-height: 20px;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__privacy {
@@ -67,7 +67,7 @@
     font-weight: 100;
     font-size: 14px;
     line-height: 20px;
-    color: #f1f5f4;
+    color: $white-text;
     text-decoration: none;
 
   }
@@ -86,37 +86,37 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 125%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__adress {
     width: 200px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__phone {
     margin-left: 32px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__mail {
     margin-bottom: 36px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: #$white-text;
   }
 
   &__container {
@@ -140,7 +140,7 @@
     font-size: 24px;
     line-height: 125%;
 
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__container {
@@ -150,21 +150,21 @@
   &__day {
     width: 30px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__time {
     width: 92px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 }
 
@@ -183,7 +183,7 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 125%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__cash,
@@ -191,11 +191,11 @@
   &__corporate-cash {
     margin-bottom: 5px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
     text-decoration: none;
   }
 }
@@ -214,7 +214,7 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 125%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__history,
@@ -223,11 +223,11 @@
   &__news {
     margin-bottom: 5px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
     text-decoration: none;
   }
 }
