--- a/src/styles/future.scss
+++ b/src/styles/future.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 2560px;
+  max-width: $max-monitor;
   padding-top: 10px;
   padding-bottom: 184px;
   padding-left: 55px;
@@ -14,9 +14,8 @@
     align-self: center;
     margin-bottom: 63px;
 
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 48px;
+    @include headers-font;
+
     line-height: 120%;
   }
 
@@ -25,9 +24,8 @@
     bottom: 184px;
     right: 207px;
 
-    font-family: "Raleway", sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     line-height: 100%;
     color: #1c1b29;
     text-decoration: none;
