--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "vars_mixins.scss";
 @import "reset.scss";
 @import "header.scss";
 @import "nav.scss";
