--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 2560px;
+  max-width: $max-monitor;
   padding-top: 120px;
   padding-bottom: 240px;
   padding-left: 55px;
@@ -11,9 +11,9 @@
   &__title {
     margin-bottom: 75px;
     margin-left: 200px;
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 48px;
+
+    @include headers-font;
+    
     line-height: 120%;
   }
 
@@ -30,9 +30,9 @@
 
     margin-left: calc(50% + 325px);
     margin-right: auto;
-    font-family: "Raleway", sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+
+    @include Raleway-small-font;
+
     line-height: 100%;
     color: #1c1b29;
     text-decoration: none;
