--- a/src/styles/visit_us.scss
+++ b/src/styles/visit_us.scss
@@ -3,10 +3,10 @@
   display: grid;
   grid-template-columns: 550px auto;
 
-  max-width: 2560px;
+  max-width: $max-monitor;
   padding-top: 190px;
 
-  background-color: #3f5252;
+  background-color: #$background-subcolor;
 
   &__img {
     grid-column: 1;
@@ -20,18 +20,18 @@
 
     font-weight: bold;
     font-size: 96px;
-    color: #f1f5f4;
+    color: $white-text;
     line-height: 100%;
   }
 
   &__text {
     width: 380px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     font-weight: 100;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__link {
@@ -39,18 +39,18 @@
     height: 60px;
     padding: 17.5px 99px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     text-decoration: none;
-    color: #f1f5f4;
-    background-color: #cd4d31;
+    color: $white-text;
+    background-color: $button-color;
     border: 3px solid #f1f5f4;
     border-color: transparent;
 
     transition: border-color 300ms, box-shadow 300ms;
 
     &:hover {
-      border-color: #f1f5f4 ;
+      border-color: #f1f5f4;
       box-shadow: 1px 1px 23px;
     }
   }
