--- a/src/styles/daigest.scss
+++ b/src/styles/daigest.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 459px;
-  max-width: 2560px;
+  max-width: $max-monitor;
   padding: 160px 55px;
   background-color: #cd4d31;
 
@@ -13,18 +13,17 @@
     font-size: 48px;
     line-height: 120%;
 
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__text {
     width: 570px;
 
-    font-family: "Raleway", sans-serif;
-    font-style: normal;
+    @include Raleway-small-font;
+
     font-weight: 200;
-    font-size: 16px;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
 
   }
 
@@ -44,7 +43,7 @@
     color: white;
 
     &::placeholder {
-      color: #f1f5f4;
+      color: $white-text;
     }
   }
 
