--- a/src/styles/ex-card.scss
+++ b/src/styles/ex-card.scss
@@ -65,9 +65,8 @@
   &__date {
     margin-bottom: 10px;
 
-    font-family: "Raleway", sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     line-height: 150%;
 
     color: #cd4d31;
@@ -75,10 +74,8 @@
     &--big {
       margin-bottom: 20px;
 
-      font-family: "Playfair Display", sans-serif;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 48px;
+      @include headers-font;
+
       line-height: 120%;
 
       transform: translateX(-100px);
@@ -89,7 +86,6 @@
     margin-bottom: 21px;
 
     font-family: "Playfair Display", sans-serif;
-    font-style: normal;
     font-weight: bold;
     font-size: 24px;
     line-height: 125%;
@@ -101,8 +97,8 @@
     width: 370px;
     margin-bottom: 50px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     line-height: 150%;
 
     color: #504f5e;
@@ -114,10 +110,10 @@
 
     padding: 18px 80px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     text-decoration: none;
-    color: #f1f5f4;
+    color: $white-text;
     background-color: #cd4d31;
     border: 3px solid #3f5252;
     border-color: transparent;
