--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,7 @@
   display: flex;
 
   position: relative;
-  max-width: 2560px;
+  max-width:$max-monitor;
   height: 800px;
   padding-top: 20px;
   padding-bottom: 52px;
@@ -10,7 +10,7 @@
   padding-left: 56px;
   padding-right: 54px;
 
-  background-color: #3f5252;
+  background-color: $background-subcolor;
 
   overflow: hidden;
 
@@ -20,12 +20,12 @@
     width: 60px;
     right: 310px;
 
-    font-family: "Raleway", sans-serif;
-    font-style: normal;
+    @include Raleway-small-font;
+
     font-weight: 500;
-    font-size: 16px;
+
     border: none;
-    color: #f1f5f4;
+    color: $white-text;
     background-color: #3f5252;
 
     z-index: 2;
@@ -43,7 +43,7 @@
     font-family: "Playfair Display", sans-serif;
     font-size: 36px;
     line-height: 43px;
-    color: #f1f5f4;
+    color: $white-text;
 
     z-index: 2;
   }
@@ -59,11 +59,11 @@
     top: 450px;
     right: 50px;
 
-    font-family: "Raleway", sans-serif;
+    @include Raleway-small-font;
+
     font-weight: 100;
-    font-size: 16px;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
 
     z-index: 0;
   }
@@ -74,11 +74,11 @@
   flex-direction: column;
   padding-top: 160px;
 
-  font-family: "Raleway", sans-serif;
+  @include Raleway-small-font;
+
   font-weight: 100;
-  font-size: 16px;
   line-height: 150%;
-  color: #f1f5f4;
+  color: $white-text;
 
   &__name-1 {
     margin-bottom: 10px;
@@ -87,7 +87,7 @@
     font-weight: 700;
     font-size: 96px;
     line-height: 100%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__name-2 {
@@ -98,7 +98,7 @@
     font-weight: 700;
     font-size: 96px;
     line-height: 100%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__about {
@@ -106,11 +106,11 @@
     margin-left: 90px;
     margin-bottom: 60px;
 
-    font-family: "Raleway", sans-serif;
+    @include Raleway-small-font;
+
     font-weight: 100;
-    font-size: 16px;
     line-height: 150%;
-    color: #f1f5f4;
+    color: $white-text;
   }
 
   &__ticket {
@@ -121,11 +121,11 @@
     margin-bottom: 132px;
     padding: 17px 80px;
 
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
+    @include Raleway-small-font;
+
     text-decoration: none;
-    color: #f1f5f4;
-    background-color: #cd4d31;
+    color: $white-text;
+    background-color: $button-color;
     border: 3px solid #f1f5f4;
     border-color: transparent;
 
