--- a/src/styles/news-card.scss
+++ b/src/styles/news-card.scss
@@ -32,9 +32,9 @@
   }
 
   &__text {
-    font-family: "Raleway", sans-serif;
+    @include Raleway-small-font;
+
     color: #1c1b29;
-    font-size: 16px;
   }
 }
 
