add simple hover efects to footer, center footer at small resolution, correct button hover, add link to logo

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -19,6 +19,12 @@
     height: 20px;
     color: $white-text;
 
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -97,6 +103,12 @@
     font-weight: 100;
     line-height: 150%;
     color: $white-text;
+
+    transition: transform 300ms;
+
+    & ~ a:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__phone {
@@ -107,6 +119,12 @@
     font-weight: 100;
     line-height: 150%;
     color: $white-text;
+
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__mail {
@@ -116,13 +134,25 @@
 
     font-weight: 100;
     line-height: 150%;
-    color: #$white-text;
+    color: $white-text;
+
+    transition: transform 300ms;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__container {
     display: flex;
     width: 100%;
     justify-content: space-around;
+
+    & > a:hover {
+
+      transition: transform 300ms;
+      transform: scale(1.2);
+    }
   }
 
 }
@@ -184,6 +214,12 @@
     font-size: 24px;
     line-height: 125%;
     color: $white-text;
+
+    & ~ a:hover {
+
+      transition: transform 300ms;
+      transform: scale(1.05);
+    }
   }
 
   &__cash,
@@ -203,7 +239,7 @@
 .about-us {
   display: flex;
   flex-direction: column;
-  width: 199px;
+  width: 240px;
 
   order: 4;
 
@@ -215,6 +251,12 @@
     font-size: 24px;
     line-height: 125%;
     color: $white-text;
+
+    & ~ a:hover {
+
+      transition: transform 300ms;
+      transform: scale(1.05);
+    }
   }
 
   &__history,
@@ -271,6 +313,8 @@
   .footer {
     display: flex;
     flex-direction: column;
+    align-items: center;
+
     padding: 80px 10px 85px;
   }
 
