--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -129,11 +129,12 @@
     border: 3px solid #f1f5f4;
     border-color: transparent;
 
+    z-index: 1;
+
     transition: border-color 300ms, box-shadow 300ms;
 
     &:hover {
-      border-color: #f1f5f4 ;
-      box-shadow: 1px 1px 23px;
+      box-shadow: 1px 1px 19px;
     }
   }
 
