--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -6,7 +6,7 @@
     top: 9px;
     display: block;
 
-    @include burger-sixe;
+    @include burger-size;
 
     background-color: $white-text;
 
@@ -16,7 +16,7 @@
       position: absolute;
       top: -7px;
 
-      @include burger-sixe;
+      @include burger-size;
 
       background-color: $white-text;
     }
@@ -25,8 +25,8 @@
       content: "";
       position: absolute;
       top: +7px;
-      
-      @include burger-sixe;
+
+      @include burger-size;
 
       background-color: $white-text;
     }
@@ -100,6 +100,11 @@
 
     z-index: 2;
 
+    & > li:hover {
+      transition: transform 300ms;
+      transform: scale(1.02);
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -146,7 +151,7 @@
     transition: box-shadow 300ms;
 
     &:hover {
-      box-shadow: 1px 1px 23px;
+      box-shadow: 1px 1px 19px;
     }
   }
 
@@ -159,7 +164,7 @@
     @include Raleway-small-font;
 
     text-decoration: none;
-    color: $white-text4;
+    color: $white-text;
     background-color: #cd4d31;
     border: 3px solid #f1f5f4;
     border-color: transparent;
@@ -169,8 +174,7 @@
     transition: border-color 300ms, box-shadow 300ms;
 
     &:hover {
-      border-color: #f1f5f4 ;
-      box-shadow: 1px 1px 23px;
+      box-shadow: 1px 1px 19px;
     }
   }
 
