--- a/src/styles/visit_us.scss
+++ b/src/styles/visit_us.scss
@@ -6,7 +6,7 @@
   max-width: $max-monitor;
   padding-top: 190px;
 
-  background-color: #$background-subcolor;
+  background-color: $background-subcolor;
 
   &__img {
     grid-column: 1;
@@ -50,8 +50,8 @@
     transition: border-color 300ms, box-shadow 300ms;
 
     &:hover {
-      border-color: #f1f5f4;
-      box-shadow: 1px 1px 23px;
+
+      box-shadow: 1px 1px 19px;
     }
   }
 
