make fixes after mentors review

--- a/src/styles/digest.scss
+++ b/src/styles/digest.scss
@@ -1,4 +1,4 @@
-.daigest {
+.digest {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -50,10 +50,7 @@
   @media screen and (max-width: 1050px) {
     & {
       height: 532px;
-      padding-top: 110px;
-      padding-bottom: 120px;
-      padding-left: 99px;
-      padding-right: 99px;
+      padding: 110px 100px 120px
     }
 
     &__box {
@@ -66,7 +63,7 @@
     }
   }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 760px) {
     & {
       height: 532px;
       padding-top: 80px;
@@ -95,13 +92,6 @@
     &__email {
       margin-left: 0;
       margin-top: 80px;
-    }
-  }
-
-  @media screen and (min-width: 1550px) {
-    & {
-      padding-left: calc(50% - 585px);
-      padding-right: calc(50% - 585px);
     }
   }
 }
