--- a/src/styles/fcard.scss
+++ b/src/styles/fcard.scss
@@ -46,8 +46,7 @@
   &__type {
     margin-bottom: 10px;
 
-    font-family: "Raleway", sans-serif;
-    font-style: normal;
+    font-family: $secondary-font;
     font-weight: 200;
     font-size: 14px;
     line-height: 20px;
@@ -121,7 +120,7 @@
     }
   }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 760px) {
     &__container {
       margin-top: 60px;
     }
