--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -60,7 +60,7 @@
   &__copyright {
     margin-right: 40px;
 
-    font-family: "Raleway", sans-serif;
+    font-family: $secondary-font;
     font-weight: 100;
     font-size: 14px;
     line-height: 20px;
@@ -69,208 +69,21 @@
 
   &__privacy {
 
-    font-family: "Raleway", sans-serif;
+    font-family: $secondary-font;
     font-weight: 100;
     font-size: 14px;
     line-height: 20px;
     color: $white-text;
     text-decoration: none;
 
-  }
-}
-
-.contacts {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-  margin-right: 90px;
-
-  &__title {
-    margin-bottom: 40px;
-
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 125%;
-    color: $white-text;
-  }
-
-  &__adress {
-    width: 200px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-
-    transition: transform 300ms;
-
-    & ~ a:hover {
-      transform: scale(1.05);
+    &__contacts {
+      margin-right: 90px;
     }
-  }
 
-  &__phone {
-    margin-left: 32px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-
-    transition: transform 300ms;
-
-    &:hover {
-      transform: scale(1.05);
+    &__work-time,
+    &__membership {
+      margin-right: 60px;
     }
-  }
-
-  &__mail {
-    margin-bottom: 36px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-
-    transition: transform 300ms;
-
-    &:hover {
-      transform: scale(1.05);
-    }
-  }
-
-  &__container {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-
-    & > a:hover {
-
-      transition: transform 300ms;
-      transform: scale(1.2);
-    }
-  }
-
-}
-
-.work-time {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-  margin-right: 60px;
-
-  &__title {
-    margin-bottom: 40px;
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 125%;
-
-    color: $white-text;
-  }
-
-  &__container {
-    display: flex;
-  }
-
-  &__day {
-    width: 30px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-  }
-
-  &__time {
-    width: 92px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-  }
-}
-
-.membership {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-  margin-right: 60px;
-
-  order: 3;
-
-  &__title {
-    margin-bottom: 38px;
-
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 125%;
-    color: $white-text;
-
-    & ~ a:hover {
-
-      transition: transform 300ms;
-      transform: scale(1.05);
-    }
-  }
-
-  &__cash,
-  &__individual-cash,
-  &__corporate-cash {
-    margin-bottom: 5px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-    text-decoration: none;
-  }
-}
-
-.about-us {
-  display: flex;
-  flex-direction: column;
-  width: 240px;
-
-  order: 4;
-
-  &__title {
-    margin-bottom: 40px;
-
-    font-family: "Playfair Display", sans-serif;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 125%;
-    color: $white-text;
-
-    & ~ a:hover {
-
-      transition: transform 300ms;
-      transform: scale(1.05);
-    }
-  }
-
-  &__history,
-  &__museum,
-  &__hire,
-  &__news {
-    margin-bottom: 5px;
-
-    @include Raleway-small-font;
-
-    font-weight: 100;
-    line-height: 150%;
-    color: $white-text;
-    text-decoration: none;
   }
 }
 
@@ -288,28 +101,28 @@
       top: 125px;
       right: 27px;
     }
+
+    &__contacts{
+      margin-right: 0;
+      margin-bottom: 60px;
+    }
   }
 
-  .contacts {
+  .footer__work-time {
     margin-right: 0;
-    margin-bottom: 60px;
   }
 
-  .work-time {
-    margin-right: 0;
-  }
-
-  .about-us {
+  .footer__about-us {
     order: 3;
   }
 
-  .membership {
+  .footer__membership {
     order: 4;
     margin: 0;
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 760px) {
   .footer {
     display: flex;
     flex-direction: column;
@@ -318,30 +131,30 @@
     padding: 80px 10px 85px;
   }
 
-  .work-time {
+  .footer__work-time {
     margin-right: 0;
     margin-bottom: 60px;
   }
 
-  .about-us {
+  .footer__about-us {
     margin-bottom: 60px;
   }
 
-  .membership {
+  .footer__membership {
     margin-bottom: 40px;
   }
 }
 
-@media screen and (min-width: 1550px) {
+@media screen and (min-width: 1250px) {
 
   .footer {
     justify-content: space-around;
   }
 
-  .contacts,
-  .work-time,
-  .about-us,
-  .membership {
+  .footer__contacts,
+  .footer__work-time,
+  .footer__about-us,
+  .footer__membership {
     transform: scale(1.2);
   }
 }
