--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -205,7 +205,7 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 760px) {
   .header {
     padding: 120px 20px;
     height: 584px;
@@ -219,6 +219,8 @@
   .header__image {
     height: 273px;
     right: -90px;
+
+    z-index: 1;
   }
 
   .text {
