--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,19 +10,34 @@
 @import "visit_us.scss";
 @import "news-card.scss";
 @import "news.scss";
-@import "daigest.scss";
+@import "digest.scss";
 @import "fcard.scss";
 @import "future.scss";
+@import "contacts.scss";
+@import "work-time.scss";
+@import "membership.scss";
+@import "about-us";
 @import "footer.scss";
+
+html {
+  scroll-behavior: smooth;
+}
 
 html * {
   font-family: "Playfair Display", sans-serif;
   font-size: 16px;
-
-  scroll-behavior: smooth;
 }
 
 body {
   background: #f1f5f4;
 
+
+  @media screen and (min-width: 2500px) {
+    & {
+      padding-left: calc(50% - 1265px);
+      padding-right: calc(50% - 1265px);
+    }
+  }
 }
+
+
