--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -59,7 +59,7 @@
   &__work-title-2 {
     margin-right: 90px;
 
-    font-family: "Raleway", sans-serif;
+    font-family: $secondary-font;
     font-weight: 100;
     font-size: 14px;
     line-height: 20px;
@@ -99,6 +99,10 @@
     background-color: #3f5252;
 
     z-index: 2;
+
+    & > li {
+      transition: transform 300ms;
+    }
 
     & > li:hover {
       transition: transform 300ms;
@@ -271,7 +275,7 @@
     }
   }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 760px) {
     &__img {
       z-index: -5;
     }
