--- a/src/styles/news-card.scss
+++ b/src/styles/news-card.scss
@@ -5,7 +5,7 @@
   height: 515px;
   width: 370px;
 
-  font-family: "Raleway", sans-serif;
+  font-family: $secondary-font;
   color: #1c1b29;
 
   &__image {
@@ -15,7 +15,7 @@
   &__date {
     margin-bottom: 5px;
 
-    font-family: "Raleway", sans-serif;
+    font-family: $secondary-font;
     color: #1c1b29;
     font-weight: 200;
     font-size: 14px;
