--- a/src/styles/vars_mixins.scss
+++ b/src/styles/vars_mixins.scss
@@ -3,12 +3,12 @@ $white-text: #f1f5f4;
 $max-monitor: 2560px;
 $button-color: #cd4d31;
 $background-subcolor: #3f5252;
+$secondary-font: "Raleway", sans-serif;
 
 // -----------------------------------MIXINS-----------------------------------
 
 @mixin Raleway-small-font {
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
+  font-family: $secondary-font;
   font-size: 16px;
 }
 
