small fixes add transition to all links at footer

--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -14,8 +14,11 @@
     line-height: 125%;
     color: $white-text;
 
-    & ~ a:hover {
+    & ~ a {
+      transition: transform 300ms;
+    }
 
+    & ~ a:hover {
       transition: transform 300ms;
       transform: scale(1.05);
     }
