--- a/src/styles/membership.scss
+++ b/src/styles/membership.scss
@@ -14,6 +14,10 @@
     line-height: 125%;
     color: $white-text;
 
+    & ~ a {
+      transition: transform 300ms;
+    }
+
     & ~ a:hover {
 
       transition: transform 300ms;
