--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,19 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+@import "blocks/header";
+@import "blocks/title";
+@import "blocks/section";
+@import "blocks/actions";
+@import "blocks/card";
+@import "blocks/event";
+@import "blocks/gallery";
+@import "blocks/form";
+@import "blocks/button";
+@import "blocks/footer";
+@import "blocks/full-screen";
+@import "blocks/subscribe";
 
 body {
   background: $c-gray;
