--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
+$text-font: ibm plex sans, sans-serif;
+$title-font: montserrat, sans-serif;
+
 $c-gray: #eee;
+$title-color: #0f0e08;
+$white-color: #fff;
+$black-color: #000;
+$green-color: #1a5a4c;
+$orange-color: #f14a27;
+$grey-color: #687480;
+$text-color: #4e4e4e;
+
+$small-screen: 320px;
+$medium-screen: 768px;
+$large-screen: 1920px;
