--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -30,7 +30,7 @@
   }
 
   &__link {
-    transition: transform 0.5s;
+    transition: transform 0.3s;
 
     &:hover {
       transform: scale(1.2);
@@ -41,8 +41,8 @@
     transition: transform 0.3s;
 
     &:hover {
-      transform: scale(1.1);
-      color: $orange-color;
+      transform: scale(1.2);
+      color: $green-color;
     }
   }
 
