add burger-menu, solution without adaptive

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,9 +3,8 @@
 }
 
 html {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
   font-weight: 400;
   scroll-behavior: smooth;
 }
@@ -13,4 +12,15 @@ html {
 html,
 body {
   height: 100%;
+}
+
+body {
+  background-color: #fff;
+  &.lock {
+    overflow: hidden;
+  }
+}
+
+strong {
+  font-weight: 600;
 }
