--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -5,6 +5,7 @@ button,
 h1,
 h2,
 h3,
+h4,
 ul,
 li,
 p,
@@ -14,4 +15,5 @@ a {
   text-decoration: none;
   list-style: none;
   border-width: 0;
+  color: black;
 }
