--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,8 +3,17 @@
 @import "global";
 @import "header";
 @import "logo";
-@import "burger-menu";
+@import "menu";
+@import "promo";
 @import "button";
-@import "event";
+@import "promo-button";
 @import "heading";
-
+@import "event";
+@import "lecture";
+@import "content";
+@import "gallery";
+@import "switch-button";
+@import "subscribe";
+@import "form";
+@import "footer";
+@import "nav";
