--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,10 @@
 $c-gray: #eee;
 $line-height: 2px;
-$logo-width: 68px;
-$logo-height: 72px;
+$logo-small-width: 55px;
+$logo-height: 61px;
 $width-event-content: 1170px;
 $color-item: #687480;
-$color-date:#1A5A4C;
+$color-active: #1a5a4c;
+$color-main: #0f0e08;
+$width-lecture-description: 278px;
+$height-gallery-button: 42px;
