--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -2,15 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70px;
-  height: 70px;
-  background-color: #1A5A4C;
+  width: 50px;
+  height: 50px;
+  background-color: #1a5a4c;
+  cursor: pointer;
 
   &__icon {
     width: 24px;
     height: 24px;
-    background: no-repeat center url("../images/icon/arrow_button.svg");
+    background: url("../images/icon/arrow_button.svg") no-repeat center;
   }
 }
-
-
