--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,33 +1,73 @@
 .event {
-  padding: 100px calc(50% - #{$width-event-content / 2});
+  padding: 0 20px;
 
   &__heading {
-    margin-bottom: 60px;
-  }
+    margin-bottom: 40px;
+    text-align: center;
 
-  &__block {
-    display: flex;
-    justify-content: space-between;
-    &:not(:last-child){
-      margin-bottom: 60px;
+    & ~ .event__block {
+      margin-bottom: 40px;
     }
   }
 
-  &__info {
-    width: 370px;
+  &__image {
+    max-width: 100%;
+    margin-bottom: 15px;
   }
 
-  &__item {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1;
-    color: $color-item;
-    text-transform: uppercase;
+  &__info {
+    max-width: 370px;
+  }
+
+  &__date-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-basis: 279px;
+    margin-bottom: 10px;
+  }
+
+  &__mark {
+    @extend %mark;
     margin-right: 26px;
   }
 
   &__date {
-    font-weight: 700;
-    font-size: 14px;
+    @extend %date;
+  }
+
+  &__title {
+    width: 280px;
+    height: 34px;
+    @extend %title;
+    margin-bottom: 10px;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      bottom: 50%;
+      right: 5px;
+      transform: translate(-50%, -50%);
+      display: block;
+      width: 10px;
+      height: 10px;
+      background-color: #f14a27;
+    }
+
+    &--near::after {
+      right: 40px;
+    }
+  }
+
+  &__text {
+    font-weight: 300;
+    line-height: 1.2em;
+    color: #4e4e4e;
+  }
+
+  &:nth-child(2) {
+    margin-bottom: 70px;
   }
 }
