--- a/src/styles/_heading.scss
+++ b/src/styles/_heading.scss
@@ -1,8 +1,7 @@
 .heading {
-font-family: Montserrat, sans-serif;
-font-weight: 700;
-font-size: 48px;
-line-height: 1;
-color: #0F0E08;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1em;
+  color: $color-main;
 }
- 
