--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -1,8 +1,6 @@
 .logo {
-  width: $logo-width;
+  display: block;
+  width: $logo-small-width;
   height: $logo-height;
-  background-image: url("../images/logo.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  background: url("../images/logo.png") no-repeat center / contain;
 }
