--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,10 +11,10 @@
   &__item {
     padding: 0 23px;
     list-style-type: none;
-    transition: transform 0.5s;
+    border-radius: 5px;
 
     &:hover {
-      transform: scale(1.1);
+      text-decoration: underline;
     }
   }
 
