--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -5,6 +5,11 @@
   background-color: $color-green;
   color: $color-white;
 
+  &:focus {
+    outline: none;
+    border: 2px solid $color-black;
+  }
+
   cursor: pointer;
   transition: background-color 0.5s;
 
