renamed classes and fix scss

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -18,12 +18,12 @@
     justify-content: space-between;
     height: 158px;
 
-    &-logo {
+    &--logo {
       height: 72px;
       width: 63px;
     }
 
-    &-link {
+    &--link {
       display: flex;
       justify-content: space-between;
     }
@@ -84,14 +84,14 @@
     justify-content: space-between;
     margin-left: 5%;
 
-    &-left {
+    &--left {
       display: flex;
       flex-direction: column;
       width: 136px;
       margin-right: 160px;
     }
   
-    &-right {
+    &--right {
       display: flex;
       flex-direction: column;
       width: 62px;
@@ -114,7 +114,7 @@
       width: auto;
     }
 
-    &__nav-left {
+    &__nav--left {
       margin-right: 50px;
     }
   }
@@ -131,7 +131,7 @@
       height: auto;
       margin-bottom: 40px;
 
-      &-link {
+      &--link {
         width: 62px;
       }
     }
