--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,11 +2,16 @@
   position: relative;
   width: 100%;
 
-  &__img {
+  &__img,
+  &__bottom {
     width: 100%;
+    display: none;
+
+    &:first-child {
+      display: block;
+    }
   }
 
-  &__img-hidden,
   &__button {
     display: none;
   }
@@ -58,7 +63,7 @@
       grid-template-columns: repeat(2, 1fr);
     }
 
-    &__img-3 {
+    &__img:nth-child(3) {
       display: block;
       height: 100%;
     }
@@ -71,20 +76,18 @@
   @media (min-width: 1280px) {
     grid-row-gap: 30px;
 
-    &__img-hidden,
+    &__img,
     &__button {
       display: block;
     }
 
-    &__img-3,
-    &__img-6,
+    &__img:nth-child(3),
     &__navigation-area,
     &__option {
       display: none;
     }
 
-    &__img-2,
-    &__img-4 {
+    &__img:nth-child(2) {
       height: 100%;
     }
 
@@ -104,8 +107,7 @@
     max-width: 1500px;
     margin: 0 auto;
 
-    &__img-3,
-    &__img-6 {
+    &__img:nth-child(3) {
       display: block;
     }
 
